RESPOND: alert-name-filter overflow fix (again) (#4752)

--- a/respond/app/styles/respond/alerts/_manifest.scss
+++ b/respond/app/styles/respond/alerts/_manifest.scss
@@ -29,7 +29,7 @@ $footerHeight: 40px;
 }
 
 .rsa-explorer .explorer-filters .filter-option.alert-name-filter .rsa-data-table-body {
-  overflow: hidden;
+  padding-bottom: 1px;
 }
 
 .alert-names-filter-table .rsa-data-table-body-row:hover {
